# netvault

./: .dockerignore  .gitignore  AGENTS.md  CHANGELOG.md  Dockerfile  README.md  docker-compose.iiaide.yml  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml  release.yml
deploy/: netvault-maintenance.cron  netvault-maintenance.logrotate
docs/: admin-guide.md  migration.md  operations-audit-2026-07-13.md  releasing.md  user-guide.md
scripts/: backup-server.sh  check-version-consistency.py  install.ps1  install.sh  restore-server.sh  verify-storage.sh
src/netvault/: __init__.py  doi.py
src/netvault/cli/: admin.py  config.py  http.py  update.py  upload_index.py  user.py
src/netvault/server/: config.py  crossref.py  database.py  deps.py  doi.py  main.py  models.py  schemas.py  security.py  storage.py
tests/: test_admin_cli.py  test_api.py  test_cli_helpers.py  test_crossref.py  test_installers.py  test_version_consistency.py  test_web_and_stats.py
