[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "netvault"
version = "0.3.2"
description = "A multi-user remote PDF vault with a FastAPI server and Typer CLIs."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.30.0",
  "sqlalchemy>=2.0.0",
  "psycopg[binary]>=3.2.0",
  "pydantic-settings>=2.4.0",
  "python-multipart>=0.0.9",
  "passlib[bcrypt]>=1.7.4",
  "bcrypt<4.1",
  "python-jose[cryptography]>=3.3.0",
  "pypdf>=5.0.0",
  "typer>=0.12.0",
  "requests>=2.32.0",
  "requests-toolbelt>=1.0.0",
  "rich>=13.7.0",
  "tomli-w>=1.0.0",
]

[project.optional-dependencies]
dev = [
  "httpx>=0.27.0",
  "pytest>=8.0.0",
  "pytest-cov>=5.0.0",
]

[project.scripts]
netvault = "netvault.cli.user:app"
nv = "netvault.cli.user:app"
netvault-admin = "netvault.cli.admin:app"

[project.urls]
Repository = "https://github.com/iihciyekub/netvault"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.hatch.build.targets.wheel]
packages = ["src/netvault"]

[tool.ruff]
line-length = 100
