[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "netvault"
version = "0.7.1"
description = "Lightweight CLI for the NetVault remote PDF vault."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "pypdf>=5.0.0",
  "typer>=0.12.0",
  "requests>=2.32.0",
  "requests-toolbelt>=1.0.0",
  "rich>=13.7.0",
  "tomli-w>=1.0.0",
]

[project.optional-dependencies]
dev = [
  "httpx2>=0.1.0",
  "pytest>=8.0.0",
  "pytest-cov>=5.0.0",
  "ruff>=0.9.0",
]

[project.scripts]
netvault = "netvault.cli.user:run"
nv = "netvault.cli.user:run"

[project.urls]
Repository = "https://github.com/iihciyekub/netvault"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src", "packages/netvault-server/src"]

[tool.hatch.build.targets.wheel]
packages = ["src/netvault"]

[tool.ruff]
line-length = 100
